--- a/index.html
+++ b/index.html
@@ -29,37 +29,37 @@
 			<fieldset>
 				<div class="row">
 					<div class="first-name">
-					<label for="first-name">FIRST NAME</label>
-					<input type="text" id="first-name">
+						<label for="first-name">FIRST NAME</label>
+						<input type="text" id="first-name" placeholder="hello">
 					</div>
 
 					<div class="last-name">
 						<label for="last-name">LAST NAME</label>
-						<input type="text" id="last-name">
+						<input type="text" id="last-name" placeholder="hello">
 					</div>
 				</div>
 
 				<div class="row">
 					<div class="email">
 					<label for="email">EMAIL</label>
-					<input type="email" id="email">
+					<input type="email" id="email" placeholder="hello">
 					</div>
 
 					<div class="phone-number">
 						<label for="phone-number">PHONE NUMBER</label>
-						<input type="text" id="phone-number">
+						<input type="text" id="phone-number" placeholder="hello">
 					</div>
 				</div>
 
 				<div class="row">
 					<div class="password">
 					<label for="password">PASSWORD</label>
-					<input type="password" id="password">
+					<input type="password" id="password" placeholder="hello">
 					</div>
 
 					<div class="confirm-password">
 						<label for="confirm-password">CONFIRM PASSOWRD</label>
-						<input type="password" id="confirm-password">
+						<input type="password" id="confirm-password" placeholder="hello">
 					</div>
 				</div>
 			</fieldset>
