Finalize layout for PC
Finish stylizing form
Add more flexibility to form elements
Add legend to form for accessability

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 	<div class="banner">
 		<div class="title">
+			<h1>BIRBHUB</h1>
 			<img src="assets/bird-logo.svg" alt="bird logo" width="70px" height="70px">
-			<h1>Birbhub</h1>
 		</div>
 	</div>
 	<main class="content">
@@ -21,12 +21,10 @@
 			<p>
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem placeat, vitae impedit culpa neque nesciunt, incidunt error fuga! Perspiciatis expedita reiciendis doloribus itaque dignissimos cumque molestiae magnam exercitationem et incidunt aliquam quasi vel nam eum harum nisi, voluptatem officiis repellat inventore possimus.
 			</p>
-			<h3>
-				Sign up to our <em>fake</em> service now!
-			</h3>
 		</div>
 		<form action="">
 			<fieldset>
+				<legend>Sign up to our <em>fake</em> service now!</legend>
 				<div class="row">
 					<div class="first-name">
 						<label for="first-name">FIRST NAME</label>
